Prevent horizontal overflow on notes box
Fixes an ugly issue where notes will be just too long to display and don't wrap, but scroll instead; made more common by the presence of a vertical scrollbar intruding on the width of the notes container

--- a/Theme.html
+++ b/Theme.html
@@ -212,10 +212,12 @@
                 list-style-type: none;
                 max-width: 500px;
                 max-height: 700px;
+                overflow-x: hidden;
                 overflow-y: auto;
             }
             ol.notes li.note{
                 padding: 5px 0;
+                max-width: 465px;
             }
             ol.notes img.avatar{
                 border-radius: 2px;
