use better sidebar positioning method
Use CSS3's calc() function instead of the messy method of transform: translate()

--- a/Theme.html
+++ b/Theme.html
@@ -19,8 +19,8 @@
     <meta name="select:Background" content="center/cover no-repeat fixed" title="Stretched">
     <meta name="select:Background" content="center repeat fixed" title="Tiled, Fixed">
     <meta name="select:Background" content="center repeat scroll" title="Tiled, Scrolls">
-    <meta name="select:Sidebar" content="right: 50%; transform: translate(-280px);" title="Leftside">
-    <meta name="select:Sidebar" content="left: 50%; transform: translate(280px);" title="Rightside">
+    <meta name="select:Sidebar" content="right: calc(50% + 280px);" title="Leftside">
+    <meta name="select:Sidebar" content="left: calc(50% + 280px);" title="Rightside">
     <meta name="select:Sidebar" content="display: none;" title="None">
     <meta name="select:Title Separator" content=" &mdash; " title="Hyphen">
     <meta name="select:Title Separator" content=" | " title="Pipe">
