keep usernames whole on post headers
Prevents URLs with hyphens from deviating from the intended layout for long URLs

--- a/Theme.html
+++ b/Theme.html
@@ -78,6 +78,9 @@
             }
             span.published::before{
                 content: "submitted by";
+            }
+            article header a{
+                white-space: nowrap;
             }{block:IfNotBackgroundImage}
             article header a, article footer a{
                 color: #a7a7a7;
