improve addition note styling on default look

--- a/Theme.html
+++ b/Theme.html
@@ -236,8 +236,11 @@
                 top: -3px;
                 left: 10px;
             }{block:IfNotBackgroundImage}
-            ol.notes span.action a{
+            .note a{
                 color: #000000;
+            }
+            .note blockquote a{
+                font-weight: normal;
             }{/block:IfNotBackgroundImage}
             .likebutton, .reblogbutton {
                 float: right;
