fix image heights in reblog chains

--- a/Theme.html
+++ b/Theme.html
@@ -172,6 +172,9 @@
                 padding-left: 1em;
                 margin: 0; 
             }
+            blockquote img{
+                height: auto;
+            }
             #content{
                 min-width: 250px;
                 position: relative;
