make Reply notes match reblog addition notes

--- a/Theme.html
+++ b/Theme.html
@@ -266,6 +266,12 @@
                 position: relative;
                 top: -3px;
                 left: 10px;
+            }
+            ol.notes span.answer_content{
+                display: block;
+                border-left: 3px solid;
+                padding-left: 1em;
+                margin: 10px 21px 5px;
             }{block:IfNotBackgroundImage}
             .note a{
                 color: #000000;
