fix pre overflow, blockquote margins

--- a/Theme.html
+++ b/Theme.html
@@ -123,6 +123,9 @@
             p.tmblr-attribution{
                 margin-top: 0;
             }
+            pre{
+                overflow: scroll;
+            }
             aside#sidebar{
                 position: fixed;
                 {select:Sidebar}
@@ -198,7 +201,7 @@
             blockquote{
                 border-left: 3px solid {block:IfBackgroundImage}{block:IfCustomColors}{color:Text}{/block:IfCustomColors}{block:IfNotCustomColors}{TitleColor}{/block:IfNotCustomColors}{/block:IfBackgroundImage}{block:IfNotBackgroundImage}#eeeeee{/block:IfNotBackgroundImage};
                 padding-left: 1em;
-                margin: 0; 
+                margin: 1em 0;
             }
             blockquote img{
                 height: auto;
