Label stylesheets in a more Firefox-friendly manner

--- a/Theme.html
+++ b/Theme.html
@@ -38,7 +38,7 @@
         <link rel="shortcut icon" href="{Favicon}">
         <link rel="alternate" type="application/rss+xml" href="{RSS}">
         <meta name="description" content="{MetaDescription}">
-        <style id="Vision Theme">            @font-face {
+        <style title="Vision Theme">            @font-face {
             	font-family: "tumblr-icons";
             	font-style: normal;
             	font-weight: normal;
@@ -404,9 +404,7 @@
                 border-radius: 3px;
             }
         </style>
-        <style id="Custom CSS">
-            {CustomCSS}
-        </style>
+        <style title="Custom CSS">{CustomCSS}</style>
     </head>
     <body>
         <aside id="sidebar">
