Fix custom input colour
Fixes a typo that results in the search bar being uncoloured

--- a/Theme.html
+++ b/Theme.html
@@ -161,10 +161,10 @@
                 text-align: center;{/block:HideHeaderImage}{/block:IfNotBackgroundImage}
                 border-width: 0px;
                 width: calc(100% - 2em);
-                color: {block:IfCustomColors}{color:Title}{/block:IfCustomColors}{block:IfNotCustomColors}{TitleColor}{/block:IfNotCustomColors};
+                color: {block:IfCustomColors}{color:Text}{/block:IfCustomColors}{block:IfNotCustomColors}{TitleColor}{/block:IfNotCustomColors};
             }
             aside#sidebar form#search input::placeholder{
-                color: {block:IfCustomColors}{color:Title}{/block:IfCustomColors}{block:IfNotCustomColors}{TitleColor}{/block:IfNotCustomColors};
+                color: {block:IfCustomColors}{color:Text}{/block:IfCustomColors}{block:IfNotCustomColors}{TitleColor}{/block:IfNotCustomColors};
             }
             aside#sidebar form#search input:focus{
                 outline: none;
