Undo title labelling of Custom CSS

--- a/Theme.html
+++ b/Theme.html
@@ -428,7 +428,7 @@
                 border-radius: 3px;
             }
         </style>
-        <style title="Custom CSS">{CustomCSS}</style>
+        <style id="Custom CSS">{CustomCSS}</style>
     </head>
     <body>
         <aside id="sidebar">
