Prevent overflow on link posts
Fixes an issue where ridiculously long author and/or host names can overflow off the post body

--- a/Theme.html
+++ b/Theme.html
@@ -395,7 +395,7 @@
                 font-weight: normal;
             }
             span.linkhost{
-                white-space: nowrap;
+                display: inline-block;
             }
             iframe.tumblr_audio_player{
                 max-height: 85px;
