Add class to post permalinks for Custom CSS users
One of the most common modifications users would make (breaking the link to the theme garden) was to remove the post permalink, so hopefully the option of removing the permalink more cleanly will reduce this.

--- a/Theme.html
+++ b/Theme.html
@@ -590,7 +590,7 @@
                             </a>
                         {/block:ContentSource}
                         {block:Date}
-                            <a href="{Permalink}">
+                            <a class="permalink" href="{Permalink}">
                                     {block:IfShowUsername}
                                         {PostAuthorName}</a>
                                     {/block:IfShowUsername}
