--- a/Theme.html
+++ b/Theme.html
@@ -247,7 +247,7 @@
             .sourcelogo{
                 display: inline-block;
                 float: right;
-                margin: 0;
+                margin: 0 0 0 1em;
             }
             p.datetime{
                 font-size: 0.857142857em;
