Only apply tag blacklist to index pages
Prevents posts being hidden on their permalink pages

--- a/Theme.html
+++ b/Theme.html
@@ -362,10 +362,10 @@
                 position: fixed;
                 right: 10px;
                 bottom: 10px;
-            }{block:IfHidePostsTagged}
+            }{block:IfHidePostsTagged}{block:IndexPage}
             article.{text:Hide Posts Tagged}{
                 display: none;
-            }{/block:IfHidePostsTagged}
+            }{/block:IndexPage}{/block:IfHidePostsTagged}
             img.photopost, img.panorama, img.linkimage{
                 width: 100%;
             }
