Only style tags in tags section
Fixes an oversight where tags copied and pasted into post bodies would also be styled

--- a/Theme.html
+++ b/Theme.html
@@ -260,11 +260,11 @@
             section.controls{
                 margin-top: 1em;
             }
-            a.tag{
+            section.tags a.tag{
                 margin-right: 0.5em;
                 font-weight: normal;
             }
-            a.tag::before{
+            section.tags a.tag::before{
                 content: "#";
             }
             ol.notes{
